[package]
name = "nadimd2typ"
version = "0.1.0"
edition = "2024"

[dependencies]
mdbook = "0.5.1"
mdbook-markdown = "0.5.1"
serde_derive = "1.0.228"
anyhow = "1.0.*"
clap = "4.*.*"
serde = "1.0.*"
serde_json = "1.0.*"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.1.0"
nadi_core = {path = "../nadi-system/nadi_core/", features=["parser", "functions"]}
strip-ansi-escapes = "0.2.1"
gag = "1.0.0"
